# rust-tetris

./: Cargo.toml
src/: board.rs  lib.rs  main.rs  renderer.rs  tetrimino.rs
src/renderer/: data.rs  init.rs  render.rs  texture.rs
src/shaders/: basic.vert.wgsl  image.frag.wgsl
